// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameOver /> renders the component 1`] = `
<div
  className="snake__game-over-screen"
>
  <div
    className="snake__game-over-title"
  >
    Game Over
  </div>
  <PlayButton
    onClick={[MockFunction]}
  />
</div>
`;

exports[`<Start /> renders the component 1`] = `
<div
  className="snake__start-screen"
>
  <div
    className="snake__start-screen-title"
  >
    Snake
  </div>
  <PlayButton
    onClick={[MockFunction]}
  />
</div>
`;
